hashed out line 85 for other Linked IN

--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ footer:
     # - label: "Twitter"
     #   icon: "fab fa-fw fa-twitter-square"
     #   url: "https://twitter.com/"
-    - label: "LinkedIn"
-          icon: "fab fa-fw fa-linkedin"
-          url: "https://linkedin.com/"
+    # - label: "LinkedIn"
+    #       icon: "fab fa-fw fa-linkedin"
+    #       url: "https://linkedin.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
