--- a/_config.yml
+++ b/_config.yml
@@ -69,10 +69,10 @@ author:
     #   url: "https://twitter.com/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://linkedin.com/andrewyewcy/"
+      url: "http://linkedin.com/in/andrewyewcy"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/andrewyewcy/"
+      url: "http://github.com/andrewyewcy"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
@@ -84,10 +84,10 @@ footer:
     #   url: "https://twitter.com/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://linkedin.com/andrewyewcy/"    
+      url: "http://linkedin.com/in/andrewyewcy"    
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/andrewyewcy/"
+      url: "http://github.com/andrewyewcy"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
