--- a/_config.yml
+++ b/_config.yml
@@ -90,11 +90,7 @@ footer:
       url: "http://github.com/andrewyewcy"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
-    #   url: "https://instagram.com/"
-    
-toc: true
-toc_label: "Table of Contents"
-toc_icon: "cog"
+    #   url: "https://instagram.com/"\
 
 defaults:
   # _posts
@@ -108,6 +104,10 @@ defaults:
       comments: true
       share: true
       related: true
+      toc: true
+      toc_label: "Table of Contents"
+      toc_icon: "cog"
+      
   # _pages
   - scope:
       path: "_pages"
