--- a/_config.yml
+++ b/_config.yml
@@ -107,6 +107,7 @@ defaults:
       toc: true
       toc_label: "Table of Contents"
       toc_icon: "cog"
+      toc_sticky: true
       
   # _pages
   - scope:
