--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: false
+      #author_profile: false
       read_time: true
       comments: true
       share: true
