--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Andrew Yew - Full Stack Data Science
+title: Full Stack Data Science
 email: andrewyewcy@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hi there, I'm Andrew and this is my journey through the nooks and crannies of data science.
@@ -99,7 +99,7 @@ defaults:
       type: posts
     values:
       layout: single
-      #author_profile: false
+      author_profile: true
       read_time: true
       comments: true
       share: true
