--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 main:
+  - title: "Portfolio"
+    url: /portfolio/
   - title: "Posts"
     url: /posts/
-  # - title: "Categories"
-  #   url: /categories/
   - title: "Tags"
     url: /tags/
   - title: "About"
