Removed image testing, removed share

--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ defaults:
       author_profile: true
       read_time: true
       comments: true
-      share: true
+      share: false
       related: true
       toc: true
       toc_label: "Table of Contents"
@@ -108,8 +108,8 @@ defaults:
       type: portfolio
     values:
       layout: single
-      author_profile: false
-      share: true
+      author_profile: true
+      share: false
 
 
 
