--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 author:
   name   : "Andrew Yew"
   avatar : "/assets/images/Andrew_Yew.jpg"
-  bio    : "Business Analyst turned Data Scientist, I am interested in machine learning operations and unstuctured data processing, such as texts and images. Join me as I explore the nooks and crannies of data science from data engineering to model deployment on cloud services like AWS."
+  bio    : "With experience in developing data processing and machine learning solutions  for numerical and textual data in the manufacturing and technology fields, let me help you identify and realize technical data solutions for your business."
   links:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
