--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,26 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Andrew Yew, Data Scientist
-email: andrewyewcy@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
+minimal_mistakes_skin : mint
+title                 : Andrew Yew
+title_separator       : ""
+subtitle              : Data Scientist
+email                 : andrewyewcy@gmail.com
+description           : >- # this means to ignore newlines until "baseurl:"
   Portfolio of Andrew Yew, a data scientist.
-# twitter_username: username
-linkedin_username: andrewyewcy
-github_username: andrewyewcy
-minimal_mistakes_skin: mint
-search: true
+name                  : Andrew Yew
+linkedin_username     : andrewyewcy
+github_username       : andrewyewcy
+words_per_minute      : 200
+search                : true
 
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
+timezone: America/Toronto # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones\
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+
 
 include:
   - _pages
@@ -109,7 +99,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: false
+      share: true
 
 
 
