--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ footer:
       icon: "fab fa-fw fa-github"
       url: "http://github.com/andrewyewcy"
 collections:
-  personal+projects:
+  projects:
     output: true
     permalink: /:collection/:path/
 defaults:
@@ -92,10 +92,10 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # _personal_projects
+  # _projects
   - scope:
       path: ""
-      type: personal+projects
+      type: projects
     values:
       layout: single
       author_profile: true
