--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 main:
   - title: "Personal projects"
-    url: /personal+projects/
+    url: /projects/
   - title: "Posts"
     url: /posts/
   - title: "Tags"
